--- a/examples/vanilla-legacy/tsconfig.webview.json
+++ b/examples/vanilla-legacy/tsconfig.webview.json
@@ -10,9 +10,5 @@
     },
     "types": ["@types/vscode-webview"]
   },
-  "include": [
-    "src/webview/**/*.ts",
-    "src/webview/**/*.d.ts",
-    "obj/*.d.ts"
-  ]
+  "include": ["src/webview/**/*.ts", "src/webview/**/*.d.ts", "obj/*.d.ts"]
 }
