--- a/examples/vanilla-legacy/tsconfig.extension.json
+++ b/examples/vanilla-legacy/tsconfig.extension.json
@@ -10,12 +10,6 @@
     },
     "types": ["node"]
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.d.ts",
-    "obj/*.d.ts"
-  ],
-  "exclude": [
-    "./src/webview"
-  ]
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "obj/*.d.ts"],
+  "exclude": ["./src/webview"]
 }
