--- a/examples/vanilla-elements/package.json
+++ b/examples/vanilla-elements/package.json
@@ -12,7 +12,7 @@
   "main": "index.js",
   "keywords": [],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "vscp build"
   },
   "dependencies": {
     "@vscode-elements/elements": "^1.9.0"
@@ -21,7 +21,8 @@
     "@tomjs/tsconfig": "^1.7.1",
     "@types/node": "^22.10.3",
     "@types/vscode": "^1.96.0",
-    "@types/vscode-webview": "^1.57.5"
+    "@types/vscode-webview": "^1.57.5",
+    "vscode-packer": "workspace:^"
   },
   "activationEvents": [],
   "contributes": {
