--- a/examples/vanilla-legacy/tsconfig.extension.json
+++ b/examples/vanilla-legacy/tsconfig.extension.json
@@ -8,7 +8,7 @@
     "paths": {
       "@e/*": ["./*"]
     },
-    "types": ["node"]
+    "types": ["node", "vscode-packer"]
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "obj/*.d.ts"],
   "exclude": ["./src/webview"]
