添加调试服务器
Signed-off-by: 舰队的偶像-岛风酱! <frg2089@outlook.com>

--- a/packages/packer/package.json
+++ b/packages/packer/package.json
@@ -14,28 +14,46 @@
   },
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
-    },
-    "./env": {
-      "types": "./env.d.ts"
+      "import": {
+        "default": "./dist/index.mjs",
+        "types": "./dist/index.d.mts"
+      },
+      "require": {
+        "default": "./dist/index.js",
+        "types": "./dist/index.d.ts"
+      }
     },
     "./vanilla": {
-      "types": "./dist/plugins/vanilla.d.ts",
-      "import": "./dist/plugins/vanilla.mjs",
-      "require": "./dist/plugins/vanilla.js"
+      "import": {
+        "default": "./dist/plugins/vanilla.mjs",
+        "types": "./dist/plugins/vanilla.d.mts"
+      },
+      "require": {
+        "default": "./dist/plugins/vanilla.js",
+        "types": "./dist/plugins/vanilla.d.ts"
+      }
     },
     "./typescript": {
-      "types": "./dist/plugins/typescript.d.ts",
-      "import": "./dist/plugins/typescript.mjs",
-      "require": "./dist/plugins/typescript.js"
+      "import": {
+        "default": "./dist/plugins/typescript.mjs",
+        "types": "./dist/plugins/typescript.d.mts"
+      },
+      "require": {
+        "default": "./dist/plugins/typescript.js",
+        "types": "./dist/plugins/typescript.d.ts"
+      }
     },
     "./sass": {
-      "types": "./dist/plugins/sass.d.ts",
-      "import": "./dist/plugins/sass.mjs",
-      "require": "./dist/plugins/sass.js"
-    }
+      "import": {
+        "default": "./dist/plugins/sass.mjs",
+        "types": "./dist/plugins/sass.d.mts"
+      },
+      "require": {
+        "default": "./dist/plugins/sass.js",
+        "types": "./dist/plugins/sass.d.ts"
+      }
+    },
+    "./env": "./env.d.ts"
   },
   "keywords": [],
   "scripts": {
@@ -45,7 +63,8 @@
   "dependencies": {
     "commander": "^13.0.0",
     "node-html-parser": "^7.0.1",
-    "tsup": "^8.3.5"
+    "tsup": "^8.3.5",
+    "vite": "^6.0.7"
   },
   "optionalDependencies": {
     "sass": "^1.83.1",
@@ -53,7 +72,8 @@
     "typescript": "^5.7.2"
   },
   "devDependencies": {
-    "@types/node": "^22.10.3"
+    "@types/node": "^22.10.3",
+    "@types/vscode": "^1.96.0"
   },
   "tsup": {
     "entry": [
@@ -72,6 +92,10 @@
     "minify": true,
     "bundle": true,
     "tsconfig": "tsconfig.json",
-    "clean": true
+    "clean": true,
+    "loader": {
+      ".html": "text",
+      ".template": "text"
+    }
   }
 }
