--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,9 @@
   "editor.formatOnPaste": true,
   "editor.formatOnType": true,
   "editor.bracketPairColorization.enabled": true,
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "files.associations": {
+    "*.js.template": "javascript",
+    "*.ts.template": "typescript"
+  }
 }
